Replace run_training.ipynb

--- a/CODE-Roberta/run_training.ipynb
+++ b/CODE-Roberta/run_training.ipynb
@@ -152,6 +152,11 @@
     }
    ],
    "source": [
+    "\n",
+    "DATASET_JAVA_TOKEN_RAW = '/home/user1-selab3/shradha_test/roberta/roberta/DATASET/DATASET/JAVA/TOKEN/RAW/'#os.environ['HOME']+'/Documents/2021MSR-StudyBert-RoBertaCode/roberta/DATASET/JAVA/TOKEN/RAW/'\n",
+    "if os.path.isdir(DATASET_JAVA_TOKEN_RAW):\n",
+    "    print('[DBG] Data:', DATASET_JAVA_TOKEN_RAW)\n",
+    "\n",
     "class Args:\n",
     "\n",
     "    def __init__(self):\n",
@@ -202,8 +207,8 @@
     "\n",
     "args = Args()\n",
     "args.vocab_size = 50_000\n",
-    "args.train_data_file = '/home/user1-selab3/shradha_test/roberta/roberta/DATASET/DATASET/JAVA/TOKEN/RAW/training_masked_code-small20per'\n",
-    "args.eval_data_file = '/home/user1-selab3/shradha_test/roberta/roberta/DATASET/DATASET/JAVA/TOKEN/RAW/eval_masked_code-small20per'"
+    "args.train_data_file = DATASET_JAVA_TOKEN_RAW + 'training_masked_code-small20per' # 20percent small\n",
+    "args.eval_data_file = DATASET_JAVA_TOKEN_RAW + 'eval_masked_code-small20per' # 20percent small"
    ]
   },
   {
@@ -284,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/08/2024 17:10:02 - WARNING - __main__ -   Process rank: -1, device: cuda, n_gpu: 1, distributed training: False, 16-bits training: False\n"
+      "04/23/2024 09:38:17 - WARNING - __main__ -   Process rank: -1, device: cuda, n_gpu: 1, distributed training: False, 16-bits training: False\n"
      ]
     }
    ],
@@ -497,7 +502,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/08/2024 17:10:02 - INFO - __main__ -   Training new model from scratch\n"
+      "04/23/2024 09:38:39 - INFO - __main__ -   Training new model from scratch\n"
      ]
     }
    ],
@@ -540,7 +545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/08/2024 17:10:04 - INFO - __main__ -   Training/evaluation parameters <__main__.Args object at 0x7fc8bc8aed10>\n"
+      "04/23/2024 09:39:04 - INFO - __main__ -   Training/evaluation parameters <__main__.Args object at 0x7f77dede9b90>\n"
      ]
     }
    ],
@@ -575,6 +580,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "b9ee6888",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "num_added_tokens = add_special_tokens_(model, tokenizer)\n",
+    "print(num_added_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "4d20636e",
    "metadata": {},
@@ -596,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "eb9b1474",
    "metadata": {},
    "outputs": [],
@@ -648,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "b8c38777",
    "metadata": {},
    "outputs": [
@@ -676,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "d8aa3e38",
    "metadata": {},
    "outputs": [
@@ -712,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "21ab049f",
    "metadata": {},
    "outputs": [],
@@ -755,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "53114071",
    "metadata": {
     "lines_to_next_cell": 1
@@ -789,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b1871c58",
    "metadata": {
     "lines_to_next_cell": 1
@@ -811,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "9056d990",
    "metadata": {
     "lines_to_next_cell": 1
@@ -885,6 +910,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4d046b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs:\n",
+      "tensor([[ 176,  128,  126, 2023, 2003, 1037, 2516, 2961,  176,  128,  126,    1,\n",
+      "            1,    1,    1,    1,    1,    1,    1,    1,    1,    1,    1,    1,\n",
+      "            1,    1,    1,    1,    1,    1,    1,    1,    1,    1],\n",
+      "        [ 176,  128,  126, 1996, 7526, 2003, 1037, 1037,  176,  128,  126,    1,\n",
+      "            1,    1,    1,    1,    1,    1,    1,    1,    1,    1,    1,    1,\n",
+      "            1,    1,    1,    1,    1,    1,    1,    1,    1,    1]])\n",
+      "\n",
+      "Labels:\n",
+      "tensor([[ 2426,  8048,    93,   642, 17325,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100],\n",
+      "        [   45,   552,   462, 33461,  5106,  7187,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define a batch of input sentences and their corresponding labels\n",
+    "batch = torch.tensor([[101, 2023, 2003, 1037, 2516, 2961, 102], [101, 1996, 7526, 2003, 1037, 1037, 102]])\n",
+    "labels_to_process = [\"The sky is blue\", \"I love natural language processing\"]\n",
+    "\n",
+    "inputs, labels = read_masked_dataset(tokenizer, batch, labels_to_process)\n",
+    "\n",
+    "print(\"Inputs:\")\n",
+    "print(inputs)\n",
+    "print(\"\\nLabels:\")\n",
+    "print(labels)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5a7da2df",
    "metadata": {},
@@ -894,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "9e4fd077",
    "metadata": {},
    "outputs": [],
@@ -906,8 +975,11 @@
     "    i = 0\n",
     "    while i < len(batch):\n",
     "        # Decode the input, replace <x> tokens with labels, then re-encode the modified input\n",
+    "        #The <x> tokens in the input code are replaced with the corresponding labels in labels_to_process.\n",
     "        decoded_input = tokenizer.decode(batch[i]).replace('<x>',str(labels_to_process[i]).replace('<z>\\n',''))\n",
     "        encoded_back = tokenizer.encode(decoded_input)[1:-1]\n",
+    "        #Each line of the code is tokenized using the tokenizer and special tokens like <s> and </s> are removed.\n",
+    "        #The tokenized lines are stored in tmp_inputs_list.\n",
     "        tmp_inputs_list.append(encoded_back)\n",
     "        i += 1\n",
     "\n",
@@ -919,6 +991,8 @@
     "    for input in tmp_inputs_list:\n",
     "        tmp_input = []\n",
     "        tmp_label = []\n",
+    "# A tensor of labels is created. It has the same shape as the padded input tensor.\n",
+    "# Each label tensor has a -100 at every position except where the <z> token is present, which is marked with the corresponding token ID.\n",
     "        tmp_label.append(tokenizer.convert_tokens_to_ids('<z>'))\n",
     "        for token in input:\n",
     "            tmp_input.append(token)\n",
@@ -926,6 +1000,7 @@
     "\n",
     "        del tmp_label[-1] #Accounts for the fact that tmp_label already contains <z>\n",
     "\n",
+    "        #Each tokenized line is padded to match the maximum length among all lines.\n",
     "        i = len(tmp_input)\n",
     "        while i < max_length:\n",
     "            tmp_input.append(tokenizer.pad_token_id)\n",
@@ -942,6 +1017,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "54270082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Labels tensor:\n",
+      "tensor([[50001,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100],\n",
+      "        [50001,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100],\n",
+      "        [50001,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,  -100,\n",
+      "          -100,  -100,  -100,  -100,  -100]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Sample input code and labels\n",
+    "input_code = \"public void METHOD_1 ( TYPE_1 VAR_1 , String [ ] VAR_2 ) throws TYPE_2 , TYPE_3 , TYPE_4 <x> TYPE_6 [ ] params = new TYPE_6 [ 2 ] ; params [ 0 ] = new TYPE_6 ( STRING_1 , STRING_2 , VAR_1 ) ; params [ 1 ] = new TYPE_6 ( STRING_3 , STRING_4 , VAR_2 ) ; METHOD_2 ( ) . METHOD_3 ( STRING_5 , params , null ) ; }\"\n",
+    "labels_to_process = [\"STRING_1\", \"STRING_2\", \"STRING_3\", \"STRING_4\", \"STRING_5\"]\n",
+    "\n",
+    "# Convert input code and labels to token IDs\n",
+    "input_code_tokens = tokenizer.encode(input_code, add_special_tokens=False)\n",
+    "label_tokens = [tokenizer.encode(label, add_special_tokens=False)[0] for label in labels_to_process]  # Assuming labels are single tokens\n",
+    "\n",
+    "# Create a batch of input codes and labels\n",
+    "batch_size = 3\n",
+    "input_code_batch = [input_code_tokens] * batch_size\n",
+    "labels_batch = [label_tokens] * batch_size\n",
+    "\n",
+    "# Get non-masked instances\n",
+    "inputs, labels = get_non_masked_instances(tokenizer, input_code_batch, labels_batch)\n",
+    "\n",
+    "# Print the outputs\n",
+    "# print(\"Inputs tensor:\")\n",
+    "# print(inputs)\n",
+    "print(\"\\nLabels tensor:\")\n",
+    "print(labels)\n",
+    "\n",
+    "#The output tensor labels represents the labels for the tokens in the input code. \n",
+    "#In this case, <x> tokens are replaced with the corresponding label tokens, while <z> tokens are represented by -100 to indicate that no prediction should be made at those positions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ac8808e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replacing <x> with Labels:\n",
+    "# <x> tokens in the input code are replaced with the corresponding labels from labels_to_process. These are the positions where masked tokens are present.\n",
+    "# For example, if labels_to_process contains [\"STRING_1\", \"STRING_2\", \"STRING_3\", \"STRING_4\", \"STRING_5\"], <x> tokens in the input code will be replaced with these labels accordingly.\n",
+    "# Adding <z> Tokens:\n",
+    "# <z> tokens are used to indicate positions in the input code where no masked token is present.\n",
+    "# For positions where <x> tokens are not present, <z> tokens are added to indicate that no token should be predicted at those positions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb0100e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input code: \"int x = <z> + <x>;\"\n",
+    "# Labels: [\"a\", \"b\", \"c\"]\n",
+    "\n",
+    "# After replacing <x> with labels:\n",
+    "# Input code: \"int x = <z> + a;\"\n",
+    "\n",
+    "# After adding <z> tokens:\n",
+    "# Input code: \"int x = <z> + a;<z>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dacf036d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input code: \"public void METHOD_1 ( TYPE_1 VAR_1 , String [ ] VAR_2 ) throws TYPE_2 , TYPE_3 , TYPE_4 <x> TYPE_6 [ ] params = new TYPE_6 [ 2 ] ; params [ 0 ] = new TYPE_6 ( STRING_1 , STRING_2 , VAR_1 ) ; params [ 1 ] = new TYPE_6 ( STRING_3 , STRING_4 , VAR_2 ) ; METHOD_2 ( ) . METHOD_3 ( STRING_5 , params , null ) ; }\"\n",
+    "# Labels: [\"A\", \"B\", \"C\", \"D\", \"E\"]\n",
+    "# After replacing <x> with labels:\n",
+    "# Input code: \"public void METHOD_1 ( TYPE_1 VAR_1 , String [ ] VAR_2 ) throws TYPE_2 , TYPE_3 , TYPE_4 A TYPE_6 [ ] params = new TYPE_6 [ 2 ] ; params [ 0 ] = new TYPE_6 ( STRING_1 , STRING_2 , VAR_1 ) ; params [ 1 ] = new TYPE_6 ( STRING_3 , STRING_4 , VAR_2 ) ; METHOD_2 ( ) . METHOD_3 ( STRING_5 , params , null ) ; }\"\n",
+    "# add <z> tokens to indicate positions where no masked token is present. Here's how it works:\n",
+    "\n",
+    "# Iterate through each token in the input code.\n",
+    "# Replace <x> tokens with labels from the labels_to_process list.\n",
+    "# Add <z> tokens at positions where no <x> token is present.\n",
+    "\n",
+    "# Input code: \"public void METHOD_1 ( TYPE_1 VAR_1 , String [ ] VAR_2 ) throws TYPE_2 , TYPE_3 , TYPE_4 A TYPE_6 [ ] params = new TYPE_6 [ 2 ] ; params [ 0 ] = new TYPE_6 ( STRING_1 , STRING_2 , VAR_1 ) ; params [ 1 ] = new TYPE_6 ( STRING_3 , STRING_4 , VAR_2 ) ; METHOD_2 ( ) . METHOD_3 ( STRING_5 , params , null ) ; }\"\n",
+    "# After processing the first token public:\n",
+    "# Input code: \"public <z> METHOD_1 ( TYPE_1 VAR_1 , String [ ] VAR_2 ) throws TYPE_2 , TYPE_3 , TYPE_4 A TYPE_6 [ ] params = new TYPE_6 [ 2 ] ; params [ 0 ] = new TYPE_6 ( STRING_1 , STRING_2 , VAR_1 ) ; params [ 1 ] = new TYPE_6 ( STRING_3 , STRING_4 , VAR_2 ) ; METHOD_2 ( ) . METHOD_3 ( STRING_5 , params , null ) ; }\"\n",
+    "\n",
+    "# continue iterating through each token, replacing <x> with labels and adding <z> where necessary.\n",
+    "# Input code: \"public <z> METHOD_1 ( TYPE_1 VAR_1 , String [ ] VAR_2 ) throws TYPE_2 , TYPE_3 , TYPE_4 A TYPE_6 [ ] params = new TYPE_6 [ 2 ] ; params [ 0 ] = new TYPE_6 ( STRING_1 , STRING_2 , VAR_1 ) ; params [ 1 ] = new TYPE_6 ( STRING_3 , STRING_4 , VAR_2 ) ; METHOD_2 ( ) . METHOD_3 ( STRING_5 , params , null ) ; <z> <z> <z> <z> <z> <z> <z> <z> <z> <z>\"\n",
+    "# In this final output, <z> tokens are added at the beginning and end of the code, as well as in places where no <x> token is present. These <z> tokens indicate to the model that no token should be predicted at those positions during training.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e599bba",
+   "metadata": {},
+   "source": [
+    "x tokens are used to represent masked tokens in the input sequences during training. In the provided function get_non_masked_instances, x tokens are replaced with actual labels during training to create instances for MLM training. The model is expected to predict these masked tokens. z tokens, on the other hand, are used as a special token to denote positions where no masked token is present in the input sequences.z tokens are used in instances where no x token is present, indicating to the model that no token should be predicted at that position.\n",
+    "During training, if the model encounters a z token, it's expected to output nothing at that position.\n",
+    "x tokens represent masked tokens that the model is trained to predict, while z tokens indicate positions where no masked token is present, guiding the model during training to output nothing at those positions."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "94b45317",
    "metadata": {},
@@ -955,6 +1183,14 @@
    "metadata": {},
    "source": [
     "This get_number_perfect_predictions function computes the number of perfect predictions made by a model on a given evaluation dataset. It compares the model's predictions with the ground truth labels and counts the instances where the prediction matches the label perfectly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4af4d71",
+   "metadata": {},
+   "source": [
+    "to evaluate the performance of a trained model on an evaluation dataset. "
    ]
   },
   {
@@ -1181,14 +1417,6 @@
     "        tb_writer.close()\n",
     "\n",
     "    return global_step, tr_loss / global_step"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "abae276a",
-   "metadata": {},
-   "source": [
-    "to evaluate the performance of a trained model on an evaluation dataset. "
    ]
   },
   {
