--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -48,7 +48,11 @@
     "\n",
     "``Add a text how to access and open the Jupyter Lab interface.``\n",
     "\n",
-    "``Add a text how to update config file for namespace (gp-engine-unoselab01) and copy it into a directory .kube. (See the notebook NautilusConfigSetup.ipynb)``\n",
+    "``https://jupyterhub-west.nrp-nautilus.io/user/USER-NAME@unomaha.edu/lab``\n",
+    "\n",
+    "\n",
+    "\n",
+    "``Add a text to make sure that the config file includes namespace (gp-engine-unoselab01) correctly and copy it into a directory .kube. (See the notebook NautilusConfigSetup.ipynb)``\n",
     "\n",
     "From the Jupyter Lab interface, click on the Upload symbol, and select the config you have downloaded from the NRP portal"
    ]
