--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
@@ -26,7 +26,7 @@
     "# Step 0: Prerequisites\n",
     "\n",
     "\n",
-    "``Add a text to display namespace or pod in k9s.``\n",
+    "``Add a text to introduces some important k9s commands such as displaying namespaces, pods, etc.``\n",
     "\n",
     "\n",
     "1. You must have been added to a Nautilus namespace \n",
@@ -60,8 +60,6 @@
     "You now need to spawn a pod on the cluster with your peristent volume attached\n",
     "\n",
     "``The link below is broken.``\n",
-    "\n",
-    "``The video showed the old yaml file which had the security/permission problem.``\n",
     "\n",
     "\n",
     "For a refresher, [here is a sample YAML file](.yaml//pod_pvc.yml). Be sure to change the `name` of the pod and the `persistentVolume-name`\n",
