--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -35,8 +35,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./media/get_config.png\" />\n",
-    "<img src=\"https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png\" />"
+    "<img src=\"./media/get_config.png\" />"
    ]
   },
   {
